# GDNativeCosmos

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Definitions.cmake  Functions.cmake  GenerateGDNativeInterface.cmake  Platforms.cmake
cosmos/: CMakeLists.txt  gdnative_scripts.ini
cosmos/include/: bullet.h  player.h
cosmos/src/: bullet.cpp  library.cpp  player.cpp
emsdk/: emsdk.bat
project/: Node2D.tscn  export_presets.cfg  project.godot
project/cosmos/: bullet.gdns  cosmos_native.gdnlib  player.gdns
scripts/: download_godot.py  generate_gdnative_project_files.py  get_generated_sources.py
scripts/templates/: gdnlib.template  gdns.template  header.template  header_gen.template  library.template  library_gen.template  source.template
